[package]
name = "bitcoincore-zmq"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Bitcoin Core ZMQ subscriber with minimal dependencies"
homepage = "https://github.com/antonilol/rust-bitcoincore-zmq"
repository = "https://github.com/antonilol/rust-bitcoincore-zmq"
keywords = ["bitcoin", "bitcoin-core", "zmq"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[features]
async = ["dep:async_zmq", "dep:futures-util"]

[dependencies]
async_zmq = { version = "0.4.0", optional = true }
bitcoin = "0.30.0"
futures-util = { version = "0.3.28", optional = true }
zmq = "0.10.0"

# dev dependencies can be used in examples
[dev-dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
