[package]
name = "bitcoincore-zmq"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = "Bitcoin Core ZMQ subscriber with minimal dependencies"
homepage = "https://github.com/antonilol/rust-bitcoincore-zmq"
repository = "https://github.com/antonilol/rust-bitcoincore-zmq"
keywords = ["bitcoin", "bitcoin-core", "zmq"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]

[features]
async = ["dep:async_zmq", "dep:futures-util"]

[dependencies]
async_zmq = { version = "0.4.0", optional = true }
bitcoin = "0.30.0"
futures-util = { version = "0.3.28", optional = true }
zmq = "0.10.0"
zmq-sys = "0.12.0"

# dev dependencies can be used in examples
[dev-dependencies]
futures = "0.3.28"

[[example]]
name = "subscribe_async"
required-features = ["async"]

[[example]]
name = "subscribe_blocking"

[[example]]
name = "subscribe_receiver_pool"

[[example]]
name = "subscribe_receiver"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
