[package]
name = "bitcoincore-zmq"
version = "1.5.4"
edition = "2021"
license = "MIT"
description = "Bitcoin Core ZMQ subscriber with minimal dependencies"
homepage = "https://github.com/antonilol/rust-bitcoincore-zmq"
repository = "https://github.com/antonilol/rust-bitcoincore-zmq"
keywords = ["bitcoin", "bitcoin-core", "zmq"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]

[features]
async = ["dep:async_zmq", "dep:futures-util"]

[dependencies]
async_zmq = { version = "0.4.0", optional = true, default-features = false }
bitcoin = { version = "0.32.4", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", optional = true, default-features = false }
zmq = { version = "0.10.0", default-features = false }
zmq-sys = { version = "0.12.0", default-features = false }

# dependencies used in examples
[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["time", "rt-multi-thread", "macros"] }

[[example]]
name = "subscribe_async_timeout"
required-features = ["async"]
doc-scrape-examples = true

[[example]]
name = "subscribe_async"
required-features = ["async"]

[[example]]
name = "subscribe_blocking"

[[example]]
name = "subscribe_receiver_pool"

[[example]]
name = "subscribe_receiver"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
